force-app/main/default/objects/Case/fields/Billable_Esc_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Billable_Esc_Minutes__c</fullName>
    <description>The number of minutes that are billable after rounding to the nearest quarter of an hour.</description>
    <formula>MAX(15,(IF(MOD(Raw_Esc_Minutes__c, 60) > 47, 60, IF(MOD(Raw_Esc_Minutes__c, 60) > 32, 45, IF(MOD(Raw_Esc_Minutes__c, 60) > 17, 30, IF(MOD(Raw_Esc_Minutes__c, 60) > 2, 15, 0))))) +(Raw_Esc_Minutes__c - MOD(Raw_Esc_Minutes__c, 60)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billable Esc Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>