force-app/main/default/objects/Case/fields/Billable_Total__c.field-meta.xml
<CustomField>
    <fullName>Billable_Total__c</fullName>
    <description>The billable total for the work on this case according to the rates defined on the account.</description>
    <formula>((Billable_Esc_Minutes__c / 60) * Account.Escalated_Hourly_Rate__c) + ((Billable_Std_Minutes__c / 60) * Account.Standard_Hourly_Rate__c)</formula>
    <label>Billable Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>