force-app/main/default/objects/Case/fields/Raw_Esc_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Raw_Esc_Minutes__c</fullName>
    <description>Roll up sum of the escalated minutes on all of the case's time cards.</description>
    <label>Raw Esc Minutes</label>
    <summarizedField>Case_Time_Entry__c.Minutes__c</summarizedField>
    <summaryFilterItems>
        <field>Case_Time_Entry__c.Support_Type__c</field>
        <operation>equals</operation>
        <value>Escalated</value>
    </summaryFilterItems>
    <summaryForeignKey>Case_Time_Entry__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>